fix indicators and ranges and testing and etc.